--- a/bio.html
+++ b/bio.html
@@ -123,6 +123,8 @@
 <div class="input">Interested in the shape and structure of the data, the presence of constraints in optimization problems, and applications of these ideas in Astronomy. I have additional interests in AI and Programming Languages. Specifically, I'm very invested in the Julia ecosystem, and I've been reading a lot about neural program synthesis tools. </div> 
 
 <br><div class="input"><b>Publications</b></div> 
+
+<div class="prompt">&gt; <span style="background-color: rgba(255, 255, 255, 0.5);">Edward Berman</span>, et al, “Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging” : Submitted to the Astronomical Journal (AJ). <a href="https://arxiv.org/abs/2310.00071" target="_blank" style="color: #33ff33;">https://arxiv.org/pdf/2401.11625.pdf</a></div> <br> 
 <div class="prompt">&gt; <span style="background-color: rgba(255, 255, 255, 0.5);">Edward Berman</span>, Jacqueline McCleary, “ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data” : Submitted to The Journal of Open Source Software (JOSS). <a href="https://arxiv.org/abs/2310.00071" target="_blank" style="color: #33ff33;">https://arxiv.org/abs/2310.00071</a></div> 
 <br><div class="prompt">&gt; Noah Shinn, Federico Cassano, <span style="background-color: rgba(255, 255, 255, 0.5);">Edward Berman</span>, Ashwin Gopinath, Karthik Narasimhan, Shunyu Yao, “Reflexion: Language Agents with Verbal Reinforcement Learning”: <a href="https://arxiv.org/abs/2303.11366" target="_blank" style="color: #33ff33;">https://arxiv.org/abs/2303.11366</a></div> 
 
