--- a/bio.html
+++ b/bio.html
@@ -124,9 +124,9 @@
 
 <br><div class="input"><b>Publications</b></div> 
 
-<div class="prompt">&gt; <span style="background-color: rgba(255, 255, 255, 0.5);">Edward Berman</span>, et al, “Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging” : Submitted to the Astronomical Journal (AJ). <a href="https://arxiv.org/abs/2310.00071" target="_blank" style="color: #33ff33;">https://arxiv.org/pdf/2401.11625.pdf</a></div> <br> 
-<div class="prompt">&gt; <span style="background-color: rgba(255, 255, 255, 0.5);">Edward Berman</span>, Jacqueline McCleary, “ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data” : Submitted to The Journal of Open Source Software (JOSS). <a href="https://arxiv.org/abs/2310.00071" target="_blank" style="color: #33ff33;">https://arxiv.org/abs/2310.00071</a></div> 
-<br><div class="prompt">&gt; Noah Shinn, Federico Cassano, <span style="background-color: rgba(255, 255, 255, 0.5);">Edward Berman</span>, Ashwin Gopinath, Karthik Narasimhan, Shunyu Yao, “Reflexion: Language Agents with Verbal Reinforcement Learning”: <a href="https://arxiv.org/abs/2303.11366" target="_blank" style="color: #33ff33;">https://arxiv.org/abs/2303.11366</a></div> 
+<div class="prompt">&gt; Edward Berman, et al, “Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging” : Submitted to the Astronomical Journal (AJ). <a href="https://arxiv.org/abs/2310.00071" target="_blank" style="color: #33ff33;">https://arxiv.org/pdf/2401.11625.pdf</a></div> <br> 
+<div class="prompt">&gt; Edward Berman, Jacqueline McCleary, “ShOpt.jl : A Julia Package for Empirical Point Spread Function Characterization of JWST NIRCam Data” : Submitted to The Journal of Open Source Software (JOSS). <a href="https://arxiv.org/abs/2310.00071" target="_blank" style="color: #33ff33;">https://arxiv.org/abs/2310.00071</a></div> 
+<br><div class="prompt">&gt; Noah Shinn, Federico Cassano, Edward Berman, Ashwin Gopinath, Karthik Narasimhan, Shunyu Yao, “Reflexion: Language Agents with Verbal Reinforcement Learning”: <a href="https://arxiv.org/abs/2303.11366" target="_blank" style="color: #33ff33;">https://arxiv.org/abs/2303.11366</a></div> 
 
 <br><div class="input"><b>Aspiring Carrot Farmer</b> &#x1F955;</div> <br>
 
